# polyscan

./: .dockerignore  DOCUMENTATION.md  Dockerfile  README.md  UV_MIGRATION_REPORT.md  action.yml  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml
polyscan/: __init__.py  cli.py
polyscan/core/: engine.py  gate.py  sarif.py  sbom.py  schema.py
polyscan/engines/: __init__.py  bandit.py  base.py  eslint.py  semgrep.py  spotbugs.py  spotbugs_data.py
polyscan/rules/: semgrep.yml
polyscan/server/: __init__.py
tests/: test_gate.py  test_sarif.py  test_sbom.py  test_scan.py
tests/fixtures/: VulnExample.java  vuln.js  vuln.py
